--- a/frontend/css/all-file-transactions.css
+++ b/frontend/css/all-file-transactions.css
@@ -11,18 +11,22 @@ body {
 }
 
 table {
-    width: 100%;
+    width: 50%;
+    margin: 0 auto;
     border-collapse: collapse;
     margin-top: 2rem;
+    table-layout: fixed;
 }
 
 th,
 td {
     padding: 0.5rem;
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid #d7ff60;
-    width: 33.33%;
-    /* set width to one-third of the table width */
+    width: 100%;
+    /* set width to 100% for each cell */
+    white-space: nowrap;
+    /* prevent line breaks within cells */
 }
 
 th {
@@ -32,9 +36,6 @@ th {
     top: 0;
 }
 
-td {
-    color: #202020;
-}
 
 a {
     color: #202020;
